JFR build failure with CDS disabled

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 26
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • jfr
    • b27
    • generic
    • generic

      With the "--disable-cds" build option, it fails with the following output:
      ```
      Compiling 3 properties into resource bundles for java.base
      Compiling 8 properties into resource bundles for java.base
      Compiling 4 properties into resource bundles for java.base
      Compiling 34 properties into resource bundles for java.desktop
      Compiling up to 3357 files for java.base
      /Users/nsato/dev/jdk/git/cldr/open/src/hotspot/share/jfr/jfr.cpp:178:3: error: no type named 'restore' in 'JfrTraceId'; did you mean 'fstore'?
        JfrTraceId::restore(k);
        ^~~~~~~~~~~~~~~~~~~
        fstore
      /Users/nsato/dev/opt/jib/install/jpg/infra/builddeps/devkit-macosx/Xcode15.4+1.0/devkit-macosx-Xcode15.4+1.0.tar.gz/Xcode/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX14.sdk/usr/include/sys/fcntl.h:490:16: note: 'fstore' declared here
      typedef struct fstore {
                     ^
      1 error generated.
      lib/CompileJvm.gmk:178: recipe for target '/Users/nsato/dev/jdk/git/cldr/build/macosx-aarch64/hotspot/variant-server/libjvm/objs/jfr.o' failed
      make[3]: *** [/Users/nsato/dev/jdk/git/cldr/build/macosx-aarch64/hotspot/variant-server/libjvm/objs/jfr.o] Error 1
      make[3]: *** Waiting for unfinished jobs....
      Compiling up to 10 files for java.instrument
      Compiling up to 14 files for java.scripting
      Compiling up to 27 files for java.logging
      Compiling up to 136 files for java.compiler
      Compiling up to 5 files for java.transaction.xa
      Compiling up to 18 files for java.datatransfer
      Compiling up to 328 files for java.management
      Compiling up to 313 files for java.net.http
      make/Main.gmk:242: recipe for target 'hotspot-server-libs' failed
      make[2]: *** [hotspot-server-libs] Error 2
      make[2]: *** Waiting for unfinished jobs....
      Compiling up to 1783 files for java.xml

      ERROR: Build failed for targets 'clean jdk' in configuration 'macosx-aarch64' (exit code 2)
      Stopping javac server

      === Output from failing command(s) repeated here ===
      * For target hotspot_variant-server_libjvm_objs_jfr.o:
      /Users/nsato/dev/jdk/git/cldr/open/src/hotspot/share/jfr/jfr.cpp:178:3: error: no type named 'restore' in 'JfrTraceId'; did you mean 'fstore'?
        JfrTraceId::restore(k);
        ^~~~~~~~~~~~~~~~~~~
        fstore
      /Users/nsato/dev/opt/jib/install/jpg/infra/builddeps/devkit-macosx/Xcode15.4+1.0/devkit-macosx-Xcode15.4+1.0.tar.gz/Xcode/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX14.sdk/usr/include/sys/fcntl.h:490:16: note: 'fstore' declared here
      typedef struct fstore {
                     ^
      1 error generated.

      * All command lines available in /Users/nsato/dev/jdk/git/cldr/build/macosx-aarch64/make-support/failure-logs.
      === End of repeated output ===

      === Make failed targets repeated here ===
      lib/CompileJvm.gmk:178: recipe for target '/Users/nsato/dev/jdk/git/cldr/build/macosx-aarch64/hotspot/variant-server/libjvm/objs/jfr.o' failed
      make/Main.gmk:242: recipe for target 'hotspot-server-libs' failed
      === End of repeated output ===

      HELP: Try searching the build log for the name of the first failed target.
      HELP: Run 'make doctor' to diagnose build problems.

      make[1]: *** [main] Error 2
      make: *** [clean] Error 2
      ```
      It occured on a macos (Tahoe 26.1)

            Assignee:
            Markus Grönlund
            Reporter:
            Naoto Sato
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: