8373062: JFR build failure with CDS disabled

Reviewed-by: egahlin